clusters/homelab/apps/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: homepage
