clusters/homelab/apps/homepage/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "home.nstnr.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homepage
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
